--- a/config/samples/webservice_v1_webapp.yaml
+++ b/config/samples/webservice_v1_webapp.yaml
@@ -3,5 +3,7 @@ kind: WebApp
 metadata:
   name: webapp-sample
 spec:
-  # Add fields here
-  foo: bar
+  host: example.com
+  image: nginx
+  issuer: letsencrypt-stating
+  replicas: 3
