delete old workflow and correct typo in new

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Login to Docker
       run: docker login --username rasekmarci --password ${{ secrets.DOCKER_ACCESS_TOKEN }}
     - name: Push the Docker image
-      run: docker build . --file Dockerfile --tag rasekmarci/webservice-operator:latest
+      run: docker push . --file Dockerfile --tag rasekmarci/webservice-operator:latest
